--- a/CSS/day_3/profile.html
+++ b/CSS/day_3/profile.html
@@ -16,7 +16,7 @@
     <h1 title="고양이 쿠키의 프로필 페이지">쿠 키</h1>
     <img src="images/쿠키사진.jpeg" alt="고양이 쿠키의 정면 사진">
     <div id="introduce">
-        <p>안녕하세요. 암컷 고양이 <span class="point">쿠키</span>라고 합니다. </p>
+        <p>안녕하세요. 암컷 고양이 <span class="brown">쿠키</span>라고 합니다. </p>
         <p>어디서 태어난건진 모르겠지만,
             지금은 대구에서 살고 있습니다.</p>
         <p>
@@ -28,14 +28,16 @@
         <h2>쿠키의 이모저모</h2>
         <h4>이모는 누군지 모릅니다.</h4>
         <p>
-            1. 털을 빗어주는걸
-            <span class="red"><strong>싫어합니다.</strong></span>
+            1. 털을 빗어주는걸 <span class="red"><strong>싫어합니다.</strong></span>
             <br>
-            2. 화장실 사용 후 모래를 덮지않고 <em>벽을 긁습니다.</em> 대체 왜..?<br>
+            2. 화장실 사용 후 <span class="brown">모래를 덮지않고 </span><em>벽을 긁습니다.</em> 대체 왜..?
+            <br>
             3. 새끼가 4마리 있는데 이름은
-            <span><mark>치즈, 버터, 와플, 초코</mark></span>
-            입니다.<br>
-            4. 계속 아기 고양이었으면 좋았을텐데 지금은 초코 빼고 모두 <s>돼냥이가 되었습니다.ㅠ</s><br>
+            <span class="point"><mark>치즈, 버터, 와플, 초코</mark></span>
+            입니다.
+            <br>
+            4. 계속 아기 고양이었으면 좋았을텐데 지금은 초코 빼고 모두 <s>돼냥이가 되었습니다.ㅠ</s>
+            <br>
         </p>
     </div>
     <hr>
