--- a/admin/admin페이지제작프로젝트.html
+++ b/admin/admin페이지제작프로젝트.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>admin 페이지 프론트단 제작 프로젝트</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
@@ -47,6 +47,9 @@
 </head>
 
 <body>
+
+    /* 부트스트랩을 이용한 회원가입 페이지 만들기 */
+
     <div id="container">
         <h1>회원가입</h1>
         <form id="form" action="" method="post">
@@ -200,7 +203,7 @@
                 let userEmail = event.target.inputEmail.value
 
                 alert(
-                `${userName}님 환영합니다.
+                    `${userName}님 환영합니다.
                 아이디 : ${userId}
                 비밀번호 : ${userPw1}
                 이름 : ${userName}
