--- a/JAVASCRIPT/day_4/lotto.html
+++ b/JAVASCRIPT/day_4/lotto.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>로또 추첨 게임</title>
+    <link href="lotto.css" rel="stylesheet">
 </head>
 
 <body>
